--- a/2)Progress Steps/index.html
+++ b/2)Progress Steps/index.html
@@ -6,8 +6,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Progress Steps</title>
     <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
+
+    <div class="container">
+        <h1>Step Progress Bar</h1>
+        <div class="progress-container">
+            <div class="progress" id="progress"></div>
+            <div class="circle active"><i class="fab fa-html5"></i></div>
+            <div class="circle active"><i class="fab fa-css3-alt"></i></div>
+            <div class="circle active"><i class="fab fa-js"></i></div>
+            <div class="circle active"><i class="fab fa-react"></i></div>
+        </div>
+
+        <button class="btn"id="prev">Prev</button>
+        <button class="btn"id="next">Next</button>
+    </div>
+
+
     <script src="./script.js"></script>
 </body>
 </html>
