--- a/11)Simple Toggle Switch/index.html
+++ b/11)Simple Toggle Switch/index.html
@@ -9,6 +9,10 @@
 </head>
 <body>
 
+    <label class="switch">
+        <input type="checkbox" data-theme-toggle>
+        <span class="switch_slider"></span>
+    </label>
     <script src="./script.js"></script>
 </body>
 </html>
